--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,6 +10,7 @@ Jinja2==3.1.6
 MarkupSafe==3.0.3
 packaging==25.0
 psycopg2-binary==2.9.10
+python-dotenv==1.1.1
 SQLAlchemy==2.0.43
 typing_extensions==4.15.0
 Werkzeug==3.1.3
