feat(backend): Implement tag system (many-to-many) for tasks

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,1 +1,1 @@
-DATABASE_URL=
+DATABASE_URL="postgresql://neondb_owner:npg_P1OBvSfs0IcG@ep-delicate-hill-ac7i4lif-pooler.sa-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
